[gd_scene load_steps=40 format=3 uid="uid://cirr0xm7gsdcm"]

[ext_resource type="Texture2D" uid="uid://1lcyhbnwdmkn" path="res://p4/P4.png" id="1_4lxcm"]
[ext_resource type="Script" uid="uid://rlmx3dj6mkok" path="res://p4/pagina_4.gd" id="2_jjp51"]
[ext_resource type="Texture2D" uid="uid://bqutqkdfte6s2" path="res://assets/ArrowCircleRightOrange.png" id="3_vfpsv"]
[ext_resource type="Texture2D" uid="uid://b5epuaimc8cqk" path="res://assets/ArrowCircleLeft.png" id="4_4dn68"]
[ext_resource type="Script" uid="uid://blrbls0eouht7" path="res://p4/termometro.gd" id="5_bqmyc"]
[ext_resource type="Texture2D" uid="uid://bfm0ily5ad6t8" path="res://p5/Termometro.png" id="5_gaf85"]
[ext_resource type="Texture2D" uid="uid://ci0h4fmc4reah" path="res://p5/gelo.png" id="6_5et2k"]
[ext_resource type="Texture2D" uid="uid://bihm5nsblhbi6" path="res://p5/fogos.png" id="7_arxru"]
[ext_resource type="Texture2D" uid="uid://cn5ejtcbvf2sh" path="res://p5/fogo.png" id="7_bqmyc"]
[ext_resource type="Texture2D" uid="uid://gpyc23xnb7sl" path="res://p5/Radio.png" id="8_coxbx"]
[ext_resource type="Texture2D" uid="uid://4kxb4di5niip" path="res://p5/botaoRadio.png" id="9_6tpcv"]
[ext_resource type="Script" uid="uid://dilp2ei6wxijg" path="res://p4/potenciometro.gd" id="11_bqmyc"]
[ext_resource type="Texture2D" uid="uid://dc5tekf8e2dnq" path="res://p5/notasmusicais.png" id="13_arxru"]
[ext_resource type="Texture2D" uid="uid://dcu7ay35f3q7i" path="res://assets/SpeakerSimpleX.png" id="13_v4unl"]
[ext_resource type="AudioStream" uid="uid://bkuksytn2kqb2" path="res://vozes/pagina4.ogg" id="14_v4unl"]

[sub_resource type="CircleShape2D" id="CircleShape2D_arxru"]
radius = 51.41984

[sub_resource type="CircleShape2D" id="CircleShape2D_npyi1"]
radius = 51.0392

[sub_resource type="AtlasTexture" id="AtlasTexture_npyi1"]
atlas = ExtResource("7_arxru")
region = Rect2(0, 0, 166, 166)

[sub_resource type="AtlasTexture" id="AtlasTexture_rsoc8"]
atlas = ExtResource("7_arxru")
region = Rect2(166, 0, 166, 166)

[sub_resource type="AtlasTexture" id="AtlasTexture_em67h"]
atlas = ExtResource("7_arxru")
region = Rect2(332, 0, 166, 166)

[sub_resource type="AtlasTexture" id="AtlasTexture_qasmv"]
atlas = ExtResource("7_arxru")
region = Rect2(0, 166, 166, 166)

[sub_resource type="AtlasTexture" id="AtlasTexture_4pr8j"]
atlas = ExtResource("7_arxru")
region = Rect2(166, 166, 166, 166)

[sub_resource type="AtlasTexture" id="AtlasTexture_igkjx"]
atlas = ExtResource("7_arxru")
region = Rect2(332, 166, 166, 166)

[sub_resource type="AtlasTexture" id="AtlasTexture_754mu"]
atlas = ExtResource("7_arxru")
region = Rect2(0, 332, 166, 166)

[sub_resource type="AtlasTexture" id="AtlasTexture_cq1wr"]
atlas = ExtResource("7_arxru")
region = Rect2(166, 332, 166, 166)

[sub_resource type="AtlasTexture" id="AtlasTexture_yhqh5"]
atlas = ExtResource("7_arxru")
region = Rect2(332, 332, 166, 166)

[sub_resource type="SpriteFrames" id="SpriteFrames_qi6j7"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_npyi1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rsoc8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_em67h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qasmv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4pr8j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_igkjx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_754mu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cq1wr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yhqh5")
}],
"loop": true,
"name": &"default",
"speed": 11.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_v4unl"]
radius = 24.48877
height = 145.66391

[sub_resource type="CircleShape2D" id="CircleShape2D_5et2k"]
radius = 965.73

[sub_resource type="AtlasTexture" id="AtlasTexture_qi6j7"]
atlas = ExtResource("13_arxru")
region = Rect2(0, 0, 218, 109)

[sub_resource type="AtlasTexture" id="AtlasTexture_37av8"]
atlas = ExtResource("13_arxru")
region = Rect2(228, 0, 218, 109)

[sub_resource type="AtlasTexture" id="AtlasTexture_bd58i"]
atlas = ExtResource("13_arxru")
region = Rect2(456, 0, 218, 109)

[sub_resource type="AtlasTexture" id="AtlasTexture_jkylt"]
atlas = ExtResource("13_arxru")
region = Rect2(0, 129, 218, 109)

[sub_resource type="AtlasTexture" id="AtlasTexture_w5tsl"]
atlas = ExtResource("13_arxru")
region = Rect2(228, 129, 218, 109)

[sub_resource type="AtlasTexture" id="AtlasTexture_1huki"]
atlas = ExtResource("13_arxru")
region = Rect2(456, 129, 218, 109)

[sub_resource type="AtlasTexture" id="AtlasTexture_d4a41"]
atlas = ExtResource("13_arxru")
region = Rect2(0, 258, 218, 109)

[sub_resource type="AtlasTexture" id="AtlasTexture_utj73"]
atlas = ExtResource("13_arxru")
region = Rect2(228, 258, 218, 109)

[sub_resource type="AtlasTexture" id="AtlasTexture_iajjr"]
atlas = ExtResource("13_arxru")
region = Rect2(456, 258, 218, 109)

[sub_resource type="SpriteFrames" id="SpriteFrames_aovjr"]
animations = [{
"frames": [{
"duration": 0.25,
"texture": SubResource("AtlasTexture_qi6j7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_37av8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bd58i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jkylt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w5tsl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1huki")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d4a41")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_utj73")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iajjr")
}],
"loop": true,
"name": &"notas",
"speed": 8.0
}]

[node name="TextureRect" type="TextureRect"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_4lxcm")
script = ExtResource("2_jjp51")

[node name="seguir" type="TouchScreenButton" parent="."]
position = Vector2(624, 880)
texture_normal = ExtResource("3_vfpsv")

[node name="voltar" type="TouchScreenButton" parent="."]
position = Vector2(60, 880)
texture_normal = ExtResource("4_4dn68")

[node name="gelo" type="Area2D" parent="."]
position = Vector2(635, 530)

[node name="gelo" type="CollisionShape2D" parent="gelo"]
shape = SubResource("CircleShape2D_arxru")

[node name="gelo" type="Sprite2D" parent="gelo/gelo"]
position = Vector2(-1, 0)
scale = Vector2(0.25, 0.25)
texture = ExtResource("6_5et2k")

[node name="fogo" type="Area2D" parent="."]
position = Vector2(133, 530)

[node name="fogo" type="CollisionShape2D" parent="fogo"]
shape = SubResource("CircleShape2D_npyi1")

[node name="fogo" type="Sprite2D" parent="fogo/fogo"]
scale = Vector2(0.2, 0.2)
texture = ExtResource("7_bqmyc")

[node name="fogos" type="AnimatedSprite2D" parent="fogo/fogo"]
position = Vector2(-1.5000023, -10.999981)
scale = Vector2(0.70481926, 0.68674695)
sprite_frames = SubResource("SpriteFrames_qi6j7")
frame = 8
frame_progress = 0.81188375

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.41400003
anchor_top = 0.588
anchor_right = 0.583
anchor_bottom = 0.61
offset_left = -9.952026
offset_top = -0.11199951
offset_right = 0.25598145
offset_bottom = 0.35998535
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Temperatura: 0ยบ C"

[node name="termometro" type="Area2D" parent="Label"]
position = Vector2(76, -135)
script = ExtResource("5_bqmyc")

[node name="forma" type="CollisionShape2D" parent="Label/termometro"]
rotation = 0.7853982
shape = SubResource("CapsuleShape2D_v4unl")

[node name="termometro" type="Sprite2D" parent="Label/termometro/forma"]
position = Vector2(7.6293945e-06, 1.4142151)
rotation = -0.7853982
scale = Vector2(0.25, 0.25)
texture = ExtResource("5_gaf85")

[node name="radio" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 225.0
offset_top = 639.0
offset_right = 725.0
offset_bottom = 1139.0
scale = Vector2(0.6, 0.6)
texture = ExtResource("8_coxbx")

[node name="potenciometro" type="Sprite2D" parent="radio"]
position = Vector2(356.66663, 375)
scale = Vector2(0.22, 0.22)
texture = ExtResource("9_6tpcv")
script = ExtResource("11_bqmyc")

[node name="areaToque" type="TouchScreenButton" parent="radio/potenciometro"]
position = Vector2(-7.5756655, -7.5757446)
scale = Vector2(0.20000002, 0.20000002)
shape = SubResource("CircleShape2D_5et2k")

[node name="Node2D" type="Node2D" parent="radio/potenciometro"]
position = Vector2(-3325.7576, -6545.4546)
scale = Vector2(3.030303, 3.030303)

[node name="BalaoFala" type="AnimatedSprite2D" parent="radio/potenciometro/Node2D"]
position = Vector2(474.99997, 2045.0001)
scale = Vector2(1.832569, 1.8096337)
sprite_frames = SubResource("SpriteFrames_aovjr")
animation = &"notas"
frame_progress = 0.701382

[node name="Speaker" type="TouchScreenButton" parent="."]
position = Vector2(352, 58)
texture_normal = ExtResource("13_v4unl")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="Speaker"]
stream = ExtResource("14_v4unl")

[connection signal="pressed" from="seguir" to="." method="_on_seguir_pressed"]
[connection signal="pressed" from="voltar" to="." method="_on_voltar_pressed"]
[connection signal="input_event" from="Label/termometro" to="Label/termometro" method="_on_input_event"]
[connection signal="pressed" from="radio/potenciometro/areaToque" to="radio/potenciometro" method="_on_area_toque_pressed"]
[connection signal="released" from="radio/potenciometro/areaToque" to="radio/potenciometro" method="_on_area_toque_released"]
[connection signal="pressed" from="Speaker" to="." method="_on_speaker_pressed"]
[connection signal="finished" from="Speaker/AudioStreamPlayer2D" to="." method="_on_audio_stream_player_2d_finished"]
